--- a/src/MoesTavern.Api/MoesTavern.Api.csproj
+++ b/src/MoesTavern.Api/MoesTavern.Api.csproj
@@ -2,17 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GraphQL.Server.Core" Version="4.3.0" />
-    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="4.3.0" />
-    <PackageReference Include="GraphQL.Server.Transports.AspNetCore.SystemTextJson" Version="4.3.0" />
-    <PackageReference Include="GraphQL.Server.Ui.Altair" Version="4.3.0" />
+    <PackageReference Include="GraphQL.Server.Core" Version="4.4.1" />
+    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="4.4.1" />
+    <PackageReference Include="GraphQL.Server.Ui.Altair" Version="4.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
+    <PackageReference Include="GraphQL.Server.Transports.AspNetCore.SystemTextJson" Version="4.4.1" />
   </ItemGroup>
 
   <ItemGroup>
